Java 8 migration - closes #71 (#340)
* #71 - Java and lib upgrade

* #71 - Changed CLI using JCommander

* #71 - Updated shell scripts & dockerfiles for new CLI

* #71 - Added doc