@@ -4,7 +4,7 @@
 
     .DESCRIPTION
     This script takes one action as a parameter and then a few optional parameters depending on the chosen action.
-    
+
     Some of the actions will start Java programs - java.exe is located first by PATH, then with the environment variable JAVA_HOME.
     Moreover, the script will also take into account environment variable OPT_ARGS if present. (default is: max heap 512MB, permsize maximum 128MB)
 
@@ -17,7 +17,8 @@
        * allxml: will recursively look for all XML files inside JQM_ROOT/jobs and import them as job definitions into the central database.
        * installservice: will create a new service for the designated node. createnode is implied by this command. Admin permissions compulsory.
        * removeservice: remove the designated service node (but not the node from the central database). Implies stop. Admin permissions compulsory.
-    
+       * getrole: display a list of user roles
+
     All actions except allxml take one important optional parameter: NodeName. This is the name of the JQM node inside the central database.
     If not given, this script will assume a node name of $env:COMPUTERNAME.
 
@@ -42,10 +43,10 @@
     jqm.ps1 start -NodeName Marsu
     Starts the service of the node named "Marsu"
 #>
-[CmdletBinding(DefaultParameterSetName="op")]
+[CmdletBinding(DefaultParameterSetName = "op")]
 param(
-    [string][Parameter(Mandatory=$true, Position=0)]
-    [ValidateSet("start", "allxml", "startconsole", "createnode", "stop", "status", "installservice", "removeservice", "enqueue", "resetpassword", "enablegui")]
+    [string][Parameter(Mandatory = $true, Position = 0)]
+    [ValidateSet("start", "allxml", "startconsole", "createnode", "stop", "status", "installservice", "removeservice", "enqueue", "resetpassword", "enablegui", "getrole")]
     ## The action to perform. See cmdlet description for details.
     $Command,
 
@@ -60,7 +61,7 @@ param(
     # Optional for all actions. Name of the node. Default is $env:COMPUTERNAME.
     $NodeName = $env:COMPUTERNAME,
 
-    [string][Parameter(ParameterSetName="enqueue", Mandatory = $true)]
+    [string][Parameter(ParameterSetName = "enqueue", Mandatory = $true)]
     # For enqueue action only: this is the name of the job definiton to launch.
     $JobDef = $null,
 
@@ -72,103 +73,97 @@ param(
 $ErrorActionPreference = "Stop"
 $ServiceName = "JQM_$NodeName"
 
+if (-not $PSVersionTable -or $PSVersionTable.PSVersion.Major -lt 4) {
+    throw "This script is for PowerShell 4 and later only"
+    return
+}
+
 ## Get Java
 $java = Get-Command java -ErrorAction SilentlyContinue
-if (-not $java)
-{
+if (-not $java) {
     $java = "$env:JAVA_HOME/bin/java.exe"
-    if (-not $env:JAVA_HOME)
-    {
+    if (-not $env:JAVA_HOME) {
         throw "Cannot find Java. Check it is in the PATH or set JAVA_HOME"
     }
 }
-else
-{
+else {
     $java = $java.Path
 }
 
-if (! (Test-Path env:/JAVA_OPTS))
-{
-    $env:JAVA_OPTS = "-Xms128m -Xmx512m -XX:MaxPermSize=128m"
+if (! (Test-Path env:/JAVA_OPTS)) {
+    $env:JAVA_OPTS = "-Xms128m -Xmx512m -XX:MaxMetaspaceSize=128m"
 }
-$JAVA_OOM_ACTION="-XX:OnOutOfMemoryError=powershell.exe -NonInteractive -Command Stop-Process -Force  -Id (gwmi -Class Win32_Process -Filter `"processid=`$pid`").parentprocessid"
-$JAVA_HOME=Resolve-Path $java/../..
+$JAVA_OOM_ACTION = "-XX:OnOutOfMemoryError=powershell.exe -NonInteractive -Command Stop-Process -Force  -Id (gwmi -Class Win32_Process -Filter `"processid=`$pid`").parentprocessid"
+$JAVA_HOME = Resolve-Path $java/../..
 
 ## Helper functions
-function New-JqmService
-{   
-    if (-not (Get-Service $ServiceName -ErrorAction SilentlyContinue))
-    {
+function New-JqmService {
+    if (-not (Get-Service $ServiceName -ErrorAction SilentlyContinue)) {
         $dll = Get-ChildItem -Path $JAVA_HOME -Filter jvm.dll -Recurse -ErrorAction SilentlyContinue -Force
         Register-JqmNode
-        & .\bin\jqmservice-64.exe //IS//$ServiceName --Description="Job Queue Manager node $NodeName" --JavaHome="$JAVA_HOME" --Jvm="$(${dll}.FullName)" --Startup="auto" --ServiceUser="$ServiceUser" --ServicePassword="$ServicePassword" --StartMode="jvm" --StopMode="jvm" --StartPath=$PSScriptRoot ++StartParams="--startnode;$NodeName" --StartClass="com.enioka.jqm.tools.Main" --StopClass="com.enioka.jqm.tools.Main" --StartMethod="start" --StopMethod="stop" --LogPath="$PSScriptRoot\logs" --StdOutput="auto" --StdError="auto" --Classpath="$PSScriptRoot\jqm.jar" ++JvmOptions="$($env:JAVA_OPTS.Replace(' ', ';'));$JAVA_OOM_ACTION"
-        if (!$?)
-        {
+        & .\bin\jqmservice-64.exe //IS//$ServiceName --Description="Job Queue Manager node $NodeName" --JavaHome="$JAVA_HOME" --Jvm="$(${dll}.FullName)" --Startup="auto" --ServiceUser="$ServiceUser" --ServicePassword="$ServicePassword" --StartMode="jvm" --StopMode="jvm" --StartPath=$PSScriptRoot ++StartParams="Start-Node;-n;$NodeName" --StartClass="com.enioka.jqm.tools.Main" --StopClass="com.enioka.jqm.tools.Main" --StartMethod="start" --StopMethod="stop" --LogPath="$PSScriptRoot\logs" --StdOutput="auto" --StdError="auto" --Classpath="$PSScriptRoot\jqm.jar" ++JvmOptions="$($env:JAVA_OPTS.Replace(' ', ';'));$JAVA_OOM_ACTION"
+        if (!$?) {
             throw "could not create service $ServiceName"
         }
     }
 }
 
-function Remove-JqmService
-{   
-    if (Get-Service $ServiceName -ErrorAction SilentlyContinue)
-    { 
+function Remove-JqmService {
+    if (Get-Service $ServiceName -ErrorAction SilentlyContinue) {
         & .\bin\jqmservice-64.exe //DS//$ServiceName
-        if (!$?)
-        {
+        if (!$?) {
             throw "could not remove service $ServiceName"
         }
     }
 }
 
-function Import-AllXml
-{
-    cd $PSScriptRoot
-    & $java -jar jqm.jar -importjobdef ((ls $PSScriptRoot/jobs -Recurse -Filter *.xml -Exclude pom.xml |% FullName) -join ',')
+function Import-AllXml {
+    Set-Location $PSScriptRoot
+    & $java -jar jqm.jar Import-JobDef -f ((Get-ChildItem $PSScriptRoot/jobs -Recurse -Filter *.xml -Exclude pom.xml | % FullName) -join ',')
 }
 
-function Register-JqmNode
-{
-    cd $PSScriptRoot
-    & $java -jar jqm.jar -u
-    & $java -jar jqm.jar -createnode $NodeName
+function Register-JqmNode {
+    Set-Location $PSScriptRoot
+    & $java -jar jqm.jar Update-Schema
+    & $java -jar jqm.jar New-Node -n $NodeName
 }
 
-function Submit-JqmRequest([ValidateNotNullOrEmpty()]$JobDef)
-{    
-    cd $PSScriptRoot
-    & $java -jar jqm.jar -enqueue $JobDef
+function Submit-JqmRequest([ValidateNotNullOrEmpty()]$JobDef) {
+    Set-Location $PSScriptRoot
+    & $java -jar jqm.jar New-Ji --application $JobDef
 }
 
-function Reset-RootPassword([ValidateNotNullOrEmpty()]$RootPassword)
-{
-    cd $PSScriptRoot
-    & $java -jar jqm.jar -r $RootPassword
+function Reset-RootPassword([ValidateNotNullOrEmpty()]$RootPassword) {
+    Set-Location $PSScriptRoot
+    & $java -jar jqm.jar "Reset-Root" -p $RootPassword
 }
 
-function Enable-Gui
-{
-    if ($RootPassword)
-    {
+function Enable-Gui {
+    if ($RootPassword) {
         Reset-RootPassword $RootPassword
     }
-    cd $PSScriptRoot
-    & $java -jar jqm.jar -w enable
+    Set-Location $PSScriptRoot
+    & $java -jar jqm.jar Set-WebConfiguration -c ENABLE_HTTP_GUI
+}
+
+function Get-Role {
+    Set-Location $PSScriptRoot
+    & $java -jar jqm.jar Get-Role
 }
 
 
 ## Routing according to command
-switch($Command)
-{
+switch ($Command) {
     "start" { & .\bin\jqmservice-64.exe //ES//$ServiceName }
     "stop" { & .\bin\jqmservice-64.exe //SS//$ServiceName }
     "status" { (Get-Service $ServiceName).Status}
-    "startconsole" { cd $PSScriptRoot;& $java $env:JAVA_OPTS.split(" ") $JAVA_OOM_ACTION -jar jqm.jar -startnode $NodeName } 
-    "createnode" { Register-JqmNode } 
+    "startconsole" { Set-Location $PSScriptRoot; & $java $env:JAVA_OPTS.split(" ") $JAVA_OOM_ACTION -jar jqm.jar Start-Node -n $NodeName }
+    "createnode" { Register-JqmNode }
     "allxml" { Import-AllXml}
     "installservice" { New-JqmService }
     "removeservice" { Remove-JqmService }
     "enqueue" { Submit-JqmRequest -JobDef $JobDef }
     "resetpassword" {Reset-RootPassword $RootPassword}
     "enablegui" {Enable-Gui}
+    "getrole" {Get-Role}
 }
